--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -3,20 +3,6 @@
 body, html{
     overflow-x: hidden; 
 }
-body {
-    /* Flex */
-    display: flex;
-    flex-direction: column;
-    /* Background */
-    background: linear-gradient(
-        to bottom,rgba(0, 0, 0, 0.95),rgba(0, 0, 0, 0.85),rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.55),rgba(0, 0, 0, 0.50),rgba(0, 0, 0, 0.45),
-        rgba(0, 0, 0, 0.40),rgba(0, 0, 0, 0.35),rgba(0, 0, 0, 0.30),rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.20),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.10),rgba(0, 0, 0, 0)      
-    );
-    /* Altura minima para que ocupe todo el height y margenes-padding */
-    min-height: 100vh;         
-    margin: 0;                 
-    padding: 0;
-}
 
 
 
@@ -27,13 +13,13 @@ body {
 
 
 /* Margenes generales ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
-#mainHeader, #sectionMain, #rss, #secondaryHeader{
+#headerDesktop, #headerMobile, #sectionDesktop, #sectionDesktop, #divSearchBarDesktop, #divSearchBarMobile, #divRssDesktop, #divRssMobile{
     margin-left: 5%;
     margin-right: 5%;
 }
 
 /* HEADER DESKTOP ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
-#mainHeader{
+#headerDesktop{
     /* Flex */
     display: grid;
     grid-template-columns: 55% 35% 10%;
@@ -45,49 +31,26 @@ body {
     /* Other */
     background-clip: border-box; 
 }
-@media (max-width: 1400px) {
-    #mainHeader{
-        grid-template-columns: 50% 35% 15%;
-    }
-}
-@media (max-width: 1100px) {
-    #mainHeader{
-        grid-template-columns: 40% 45% 15%;
-    }
-}
-@media (max-width: 1000px) {
-    #mainHeader{
-        grid-template-columns: 35% 55% 15%;
-    }
-}
-@media (max-width: 900px) {
-    #mainHeader{
-        grid-template-columns: 20% 60% 20%;
-    }
-}
-@media (max-width: 800px) {
-    #mainHeader{
-        display: none;
-    }
-}
+@media (max-width: 1400px) { #headerDesktop{ grid-template-columns: 50% 35% 15%; }}
+@media (max-width: 1100px) { #headerDesktop{ grid-template-columns: 40% 45% 15%; }}
+@media (max-width: 1000px) { #headerDesktop{ grid-template-columns: 35% 55% 15%; }}
+@media (max-width: 900px) { #headerDesktop{ grid-template-columns: 20% 60% 20%; }}
+@media (max-width: 800px) { #headerDesktop{ display: none; }}
 
 
 /* MOBILE DESKTOP ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
-#secondaryHeader{
+#headerMobile{
     display: none;
     margin-top: 1em;
 }
 
 @media (max-width: 800px) {
-    #secondaryHeader{
+    #headerMobile{
         /* Flex */
         display: grid;
         grid-template-columns: repeat(3, 1fr); 
         place-items: center;
         /* Other */
-    }
-    #mainHeader{
-        grid-template-columns: 35% 30% 35%;
     }
     #pages_general_divOptions{
         display: grid;
@@ -99,6 +62,8 @@ body {
         max-width: 50%;
     }
 }
+
+
 
 .hamburger{
     position: relative;
@@ -139,7 +104,7 @@ body {
 
 
 /* RSS FLOTANTES ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
-#rss {
+#divRssDesktop {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -151,6 +116,22 @@ body {
     background: transparent;  
     padding: 0;                
 }
+#divRssMobile{
+    min-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 16em;
+    height: 5em;
+    position: fixed; 
+    gap: 3%;  
+    bottom: 2em; 
+    z-index: 9999;   
+    background: transparent;  
+    padding: 0;     
+    margin: auto;   
+}
+
     #linkedIn{
         width: 5em;
     }
@@ -160,6 +141,17 @@ body {
     #classgap{
         width: 5em;
     }
+
+    @media (max-width: 799px) {
+        #divRssMobile { display: flex; }
+        #divRssDesktop { display: none ; }
+    }
+    @media (min-width: 800px) {
+        #divRssMobile { display: none; }
+        #divRssDesktop { display: flex ; }
+    }
+
+
 
 
 
@@ -189,19 +181,5 @@ body {
     to {
         opacity: 1;
         transform: scale(1);
-    }
-}
-
-
-
-
-
-
-@media (max-width: 800px) {
-    #rss {
-        width: 100%;
-        justify-content: center;
-        gap: 3%;
-        margin:auto;
     }
 }
