--- a/css/styles_body.css
+++ b/css/styles_body.css
@@ -1,4 +1,8 @@
 
+/* Body y HTML ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+body, html{
+    overflow-x: hidden; 
+}
 
 
 .bodyGeneral{
