--- a/css/styles_header.css
+++ b/css/styles_header.css
@@ -1,4 +1,99 @@
 
+
+
+/* HEADER DESKTOP ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+#headerDesktop{
+    /* Flex */
+    display: grid;
+    grid-template-columns: 55% 35% 10%;
+    justify-content: center;
+    align-items: center;
+    /* Padding */
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+    /* Other */
+    background-clip: border-box; 
+}
+@media (max-width: 1400px) { #headerDesktop{ grid-template-columns: 50% 35% 15%; }}
+@media (max-width: 1100px) { #headerDesktop{ grid-template-columns: 40% 45% 15%; }}
+@media (max-width: 1000px) { #headerDesktop{ grid-template-columns: 35% 55% 15%; }}
+@media (max-width: 900px) { #headerDesktop{ grid-template-columns: 20% 60% 20%; }}
+@media (max-width: 800px) { #headerDesktop{ display: none; }}
+
+
+/* MOBILE DESKTOP ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+#headerMobile{
+    display: none;
+    margin-top: 1em;
+}
+
+@media (max-width: 800px) {
+    #headerMobile{
+        /* Flex */
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); 
+        place-items: center;
+        /* Other */
+    }
+    #pages_general_divOptions{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        width: 100%;
+    }
+    #pages_general_headerDivOfSearch, #pages_general_headerDivOfLang{
+        max-width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #pages_general_headerDivOfSearch2, #pages_general_headerDivOfLang2{
+        max-width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+
+
+
+.hamburger{
+    position: relative;
+    max-width: 2rem;
+    filter: brightness(0.1) invert(0.6);
+}
+.hamburger:hover{
+    cursor: pointer;
+}
+#pages_general_divOptions2{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+#pages_general_headerDivOfLang2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.pages_general_iconsOfHeader2{
+    max-width: 2.4rem;
+    filter: brightness(0.1) invert(0.6);
+}
+.pages_general_iconsOfHeader2:hover{
+    cursor: pointer;
+}
+
+@media (max-width: 350px) {
+    #logoMain2{
+        max-width: 10rem;
+    } 
+}
+
+
+
+
+
+
 #pages_general_navMain{
     display: flex;
     flex-direction: row;
