--- a/css/styles_body.css
+++ b/css/styles_body.css
@@ -2,6 +2,7 @@
 /* Body y HTML ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 body, html{
     overflow-x: hidden; 
+    overflow-y: hidden;
 }
 
 
