--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    min-height: 100vh;
+    min-height: 0;
 }
 #sectionMobile{
     display: flex;
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 100vh;
+    min-height: 0;
     margin-top: 5vh;
 }
 
