--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -92,6 +92,7 @@
                 padding: 0;
                 border-top-left-radius: 1em;
                 border-top-right-radius: 1em;
+
             }
             #pageHome_CardLastArticles_dotsAndArrowsSection{
                 width: 100%;
@@ -204,6 +205,7 @@
                 padding: 0;
                 border-top-left-radius: 1em;
                 border-top-right-radius: 1em;
+                opacity: 0.1;
             }
             #pageHome_CardLastArticles_textsSecionV{
                 margin: 0;
@@ -376,10 +378,17 @@
 .fade-in {
     animation: fadeIn 2s forwards;
 }
+.fadeInImg{
+    animation: fadeInImg 2s forwards;
+}
 
 @keyframes fadeIn {
     from { opacity: 0.3; }
     to { opacity: 1; }
+}
+@keyframes fadeInImg{
+    from { opacity: 0.3; }
+    to { opacity: 0.75; }
 }
 
 
