--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -10,12 +10,12 @@
 
 
 #sectionDesktop {
+    flex:1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 90%;
-    min-height: 0;
 }
 #sectionMobile{
     display: flex;
