--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -21,7 +21,6 @@
     display: flex;
     flex-direction: column;
     justify-content: top;
-    
 }
     #pageHome_DivVertical > div{
         text-align: center;
@@ -39,8 +38,9 @@
         align-items: center;
     }
         #pageHome_CardLastArticles{
+            transform: scale(1) ;
             margin-right: 0%;
-            width: 80%;
+            width: 75%;
             border-radius: 1em;
             background-color: rgba(0, 0, 0, 0.25);  /* negro casi opaco */
             display: flex;
@@ -196,7 +196,6 @@
             justify-content: space-between;
             align-items: center;
             overflow: hidden;
-
         }
             #pageHome_CardLastArticles_imgOfArticleV{
                 width: 100%;   
