--- a/css/styles_aboutme_desktop.css
+++ b/css/styles_aboutme_desktop.css
@@ -73,13 +73,61 @@
             }
             #cardAboutMe_Desktop_sectionContent {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 justify-content: center;
                 align-items: center;
                 background-color: rgba(30, 255, 0, 0.034);
                 border-bottom-left-radius: 3rem;
                 border-bottom-right-radius: 3rem;
+                width: 100%;
             }
+                #div_whoIAm_Desktop_Photo{
+                    min-width: 25%;
+                    margin-left: 3%;
+                    margin-right: 3%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: start;
+                    align-items: center;
+                    gap: 2rem;
+                    height: 100%;
+                    margin-top: 6%;
+                }
+                    #div_whoIAm_Desktop_Photo img{
+                        width: 50%;
+                        border-radius: 15rem;
+                    }
+                #div_whoIAm_Desktop_Text{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: start;
+                    align-items: start;
+                    margin-top: 6%;
+                    margin-right: 3%;
+                    height: 100%;
+                }
+
+                #div_whatIDo_Desktop_Btns{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    height: 100%;
+                    margin-right: 3%;
+                    margin-left: 3%;
+                }
+                    #div_whatIDo_Desktop_Btns button{
+                        background-color: rgba(142, 161, 37, 0.062);
+                        height: 100%;
+                        margin-left: 1%;
+                        margin-right: 1%;
+                        color: whitesmoke;
+                    }
+                    #div_whatIDo_Desktop_Btns button:hover{
+                        background-color: rgba(142, 161, 37, 0.295);
+                    }
+                #div_whatIDo_Desktop_Text{
+                }
+
 
         #sectionDonwloadCV_Desktop {
             display: flex;
@@ -90,4 +138,19 @@
             #buttonDonwloadCV_Desktop {
                 background-color: rgba(52, 104, 31, 0.75);
                 text-align: center;
+            }
+
+
+
+
+
+
+
+
+
+
+
+
+            .btnSelected{
+                filter: sepia(1) saturate(5) hue-rotate(-50deg);
             }
