--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -133,3 +133,27 @@
 .blackedText{
     font-weight: bold;
 }
+
+
+
+
+
+
+
+
+
+
+
+.circle {
+  display: inline-block;
+  width: 12px;   
+  height: 12px;
+  border-radius: 50%; 
+  border: 2px solid black;
+  margin-left: 4px;
+  vertical-align: middle;
+}
+
+.circle.filled {
+  background-color: black;
+}
